# frontend-gen-agent

./: README.md
backend-pipeline/: graph.mmd  main.py  pyproject.toml  requirements.txt
backend-pipeline/src/: llm.py  main.py
backend-pipeline/src/app/: file_tools.py  graph.py  prompt.py  state.py  ws_context.py
backend-pipeline/src/app/nodes/: blueprint_node.py  folder_struct_node.py  intent_node.py  page_generator.py  section_generator_node.py  section_planner_node.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css
ui/src/components/ui/: DownloadButton.tsx  download_button.tsx  infobutton.tsx
ui/src/pages/: Index.tsx
