[project]
name = "ai-agent-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "graphviz>=0.21",
    "langchain>=1.2.10",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.10",
    "langsmith[claude-agent-sdk]>=0.7.10",
    "openai>=2.24.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.41.0",
]
